- Added notes on Tomcat / CentOS set up - Now uses Tomcat management app to deploy, via gradle cargo plugin - Removed SSH plugin stuff.